# pyspark-etl-sample

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  log4j.properties  pyproject.toml
app_events/: sparksession.py  transformations.py
configs/: file_paths.json
notebooks/: users_activity.ipynb
src/: main.py  pipeline.py  schemas.py
