[tool.poetry]
name = "pyspark-etl-sample"
version = "0.1.0"
description = "Sample for implementing a simple ETL pipeline using PySpark"
authors = ["Felipe <Mendonca>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
pyspark = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
